--- a/store/blocks/product-summary/product-summary-list.jsonc
+++ b/store/blocks/product-summary/product-summary-list.jsonc
@@ -64,7 +64,6 @@
     "children": [
       "vtex.store-components:product-brand#summaryListDesktop",
       "product-summary-name#summaryListDesktop",
-      "flex-layout.col#productRating",
       "flex-layout.row#productSpecifications"
     ]
   },
@@ -188,8 +187,7 @@
     },
     "children": [
       "vtex.store-components:product-brand#summaryListMobile",
-      "product-summary-name#summaryListMobile",
-      "product-rating-inline"
+      "product-summary-name#summaryListMobile"
     ]
   },
   "flex-layout.col#summaryDownDetailsListMobile": {
