--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-  "vendor": "koestore",
+  "vendor": "storecomponents",
   "name": "store-theme",
-  "version": "0.0.3",
+  "version": "0.0.0",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
-    "sitemap": "0.x",
     "docs": "0.x"
   },
   "mustUpdateAt": "2018-09-05",
